--- a/.github/workflows.yml
+++ b/.github/workflows.yml
@@ -1,32 +1,46 @@
+# Simple workflow for deploying static content to GitHub Pages
 name: Deploy to GitHub Pages
-
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-      - main  # Replace with the branch you want to trigger on
-
+    branches: ['main']
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+# Allow one concurrent deployment
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
 jobs:
+  # Single deploy job since we're just deploying
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Node
+        uses: actions/setup-node@v3
         with:
-          node-version: 14  # Replace with your desired Node.js version
-
+          node-version: 18
+          cache: 'npm'
       - name: Install dependencies
         run: npm install
-
       - name: Build
         run: npm run build
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          publish_dir: ./build  # Replace with your build output directory
-          deploy_key: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages  # Change if you want to use a different branch for GitHub Pages
+          # Upload dist repository
+          path: './dist'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
